correcciones final proyect

--- a/secciones/gang.html
+++ b/secciones/gang.html
@@ -42,57 +42,57 @@
 
     <div class="mainst1">
         <h1>¡Sé parte de este hermoso grupo!</h1><br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe id aliquam, distinctio, tenetur fugit velit temporibus, earum labore et quia assumenda suscipit impedit debitis deserunt voluptas facere repellat veniam eaque? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore impedit vel inventore asperiores expedita voluptate dolorum aperiam minus, exercitationem, libero quo ea ipsum at cum perspiciatis? Praesentium illum est suscipit! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum minus culpa, officia libero eveniet excepturi repudiandae nemo mollitia quia iure deleniti sapiente pariatur voluptatem minima quis architecto. Culpa, voluptates nobis.</p>
+        <p>Te gustaría ser parte de este hermoso grupo? consideras que contas con las ganas de participar en las charlas diarias y desafíos semanales que vamos a estar presentando a toda la comunidad? entonces no lo dues más, hagamos crecer esta gran familia que a todos nos llena de tanta pasión!</p>
     </div>
     <form class="needs-validation" novalidate>
         <div class="form-row">
           <div class="col-md-4 mb-3">
-            <label for="validationCustom01">First name</label>
+            <label for="validationCustom01">Nombre</label>
             <input type="text" class="form-control" id="validationCustom01" placeholder="First name" value="Mark" required>
             <div class="valid-feedback">
-              Looks good!
+              Se ve bien!
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <label for="validationCustom02">Last name</label>
+            <label for="validationCustom02">Apellido</label>
             <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="Otto" required>
             <div class="valid-feedback">
-              Looks good!
+              Se ve bien!
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <label for="validationCustomUsername">Username</label>
+            <label for="validationCustomUsername">Usuario</label>
             <div class="input-group">
               <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroupPrepend">@</span>
               </div>
               <input type="text" class="form-control" id="validationCustomUsername" placeholder="Username" aria-describedby="inputGroupPrepend" required>
               <div class="invalid-feedback">
-                Please choose a username.
+                Por favor, escoje un nombre de usuario.
               </div>
             </div>
           </div>
         </div>
         <div class="form-row">
           <div class="col-md-6 mb-3">
-            <label for="validationCustom03">City</label>
+            <label for="validationCustom03">Provincia</label>
             <input type="text" class="form-control" id="validationCustom03" placeholder="City" required>
             <div class="invalid-feedback">
-              Please provide a valid city.
+              Por favor,ingresa una provincia válida.
             </div>
           </div>
           <div class="col-md-3 mb-3">
-            <label for="validationCustom04">State</label>
+            <label for="validationCustom04">Ciudad</label>
             <input type="text" class="form-control" id="validationCustom04" placeholder="State" required>
             <div class="invalid-feedback">
-              Please provide a valid state.
+              Por favor, ingresa una ciudad válida.
             </div>
           </div>
           <div class="col-md-3 mb-3">
-            <label for="validationCustom05">Zip</label>
+            <label for="validationCustom05">Código postal.</label>
             <input type="text" class="form-control" id="validationCustom05" placeholder="Zip" required>
             <div class="invalid-feedback">
-              Please provide a valid zip.
+              Por favor, brinda un CP válido.
             </div>
           </div>
         </div>
@@ -100,14 +100,14 @@
           <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
             <label class="form-check-label" for="invalidCheck">
-              Agree to terms and conditions
+              Acepta los términos y condiciones.
             </label>
             <div class="invalid-feedback">
-              You must agree before submitting.
+              Debes aceptar los términos y condiciones para continuar.
             </div>
           </div>
         </div>
-        <button class="btn btn-primary" type="submit">Submit form</button>
+        <button class="btn btn-primary" type="submit">Enviar formulario.</button>
       </form>
       
       <script>
@@ -134,7 +134,7 @@
 <div class="mainst3">
     <div><h2>Código de conduta en la comunidad</h2></div>
     <div>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil est amet ab molestias, sapiente laborum, nulla eius modi esse possimus labore dolorem iusto quibusdam, cupiditate aliquid quis odit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae quam debitis enim laboriosam, nostrum nihil odit itaque eaque mollitia quaerat repudiandae molestiae? Repellendus placeat, consequuntur recusandae velit dolores id tempora? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit ducimus cumque commodi omnis itaque. Blanditiis dicta natus distinctio quos deleniti sunt quae aut animi cupiditate debitis eveniet, aspernatur, sapiente minus!</p>
+        <p>Para aquellos que quieran formar parte de esta comunidad deben tener en cuenta que contamos con un estricto código de conducta para que las relaciones interpersonales y así mismo las relaciones e interacciones que tengan con nostros sea los más respetuoso y llevadero posible. El mismo se va a estar cargando en pdf en breve a la página para que puedan descargarlo pero también van a tener la posibilidad de leerlo desde el grupo de Discord que vamos a estar creando.</p>
     </div>
    
 </div>
@@ -142,14 +142,16 @@
 
 
 
-
-    <footer>
-        <address>
-            Alumno: Vera Lucas Ariel <br>
-            Contacto: veralucas@example.com
-        </address>
-
-    </footer>
+<section class="">
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright:
+      <a class="text-white" href="https://mdbootstrap.com/">Vera Lucas</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
+</section>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
