--- a/secciones/noticias.html
+++ b/secciones/noticias.html
@@ -142,14 +142,33 @@
 
 
 
-
-  <footer>
-    <address>
-      Alumno: Vera Lucas Ariel <br>
-      Contacto: veralucas@example.com
-    </address>
-
-  </footer>
+  <section class="">
+    <!-- Footer -->
+    <footer class="text-center text-white" style="background-color: #000000;">
+      <!-- Grid container -->
+      <div class="container p-4 pb-0">
+        <!-- Section: CTA -->
+        <section class="">
+          <p class="d-flex justify-content-center align-items-center">
+            <span class="me-3">Regístrate gratis</span>
+            <button type="button" class="btn btn-outline-light btn-rounded"><a href="../secciones/gang.html">Sign up!</a>
+              
+            </button>
+          </p>
+        </section>
+        <!-- Section: CTA -->
+      </div>
+      <!-- Grid container -->
+  
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2022 Copyright:
+        <a class="text-white" href="https://mdbootstrap.com/">Vera Lucas</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+  </section>
 
 
 
