--- a/secciones/trailers.html
+++ b/secciones/trailers.html
@@ -74,13 +74,33 @@
 
 
 
-    <footer>
-        <address>
-            Alumno: Vera Lucas Ariel <br>
-            Contacto: veralucas@example.com
-        </address>
-
-    </footer>
+    <section class="">
+      <!-- Footer -->
+      <footer class="text-center text-white" style="background-color: #000000;">
+        <!-- Grid container -->
+        <div class="container p-4 pb-0">
+          <!-- Section: CTA -->
+          <section class="">
+            <p class="d-flex justify-content-center align-items-center">
+              <span class="me-3">Regístrate gratis</span>
+              <button type="button" class="btn btn-outline-light btn-rounded"><a href="../secciones/gang.html">Sign up!</a>
+                
+              </button>
+            </p>
+          </section>
+          <!-- Section: CTA -->
+        </div>
+        <!-- Grid container -->
+    
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+          © 2022 Copyright:
+          <a class="text-white" href="https://mdbootstrap.com/">Vera Lucas</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
+      <!-- Footer -->
+    </section>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
