--- a/secciones/noticias.html
+++ b/secciones/noticias.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="descirption" content="Noticias Geek">
   <meta name="keywords" content="actualidad, ucm, disney, marvel">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="../estilos/estilos.css">
   <link rel="stylesheet" href="../estilos/mediastyle.css">
   <title>Noticias Geek</title>
@@ -44,13 +43,7 @@
   </div>
   <div class="container mt-5">
     <h1>¡Actualidad para que no pierdas nada de vista!</h1><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique excepturi ratione minima nobis
-      amet sit quam cum blanditiis laudantium quo voluptas, quidem adipisci, fugiat nihil quas voluptates sapiente
-      ducimus! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore quibusdam optio rem a! Non culpa
-      sequi, quam, itaque praesentium veniam commodi id aperiam suscipit, consequuntur labore in maxime mollitia
-      ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis facilis dicta tempore explicabo
-      autem aperiam voluptate accusamus laudantium, tenetur voluptatum praesentium voluptas similique esse
-      provident minima ducimus, consequuntur sapiente ad?</p>
+    <p>Un lugar exclusivo para poder estar al tanto de todas las noticias del cine y gaming, nunca vas a volver a perderte de nada!  </p>
   </div>
 
   <div class="container mt-5">
@@ -172,15 +165,8 @@
 
 
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
