--- a/secciones/gang.html
+++ b/secciones/gang.html
@@ -18,7 +18,7 @@
 <body>
 
     <div class="header">
-        <img src="../icons/gang.png" alt="gang" class="top">
+        <img src="../media/icons/gang.png" alt="gang" class="top">
     </div>
 
     <div class="row">
