--- a/secciones/noticias.html
+++ b/secciones/noticias.html
@@ -18,7 +18,7 @@
 <body>
 
     <div class="header">
-        <img src="../icons/noticias.png" alt="noticias" class="top">
+        <img src="../media/icons/noticias.png" alt="noticias" class="top">
     </div>
 
     <div class="row">
