--- a/secciones/trailers.html
+++ b/secciones/trailers.html
@@ -18,7 +18,7 @@
 <body>
 
     <div class="header">
-        <img src="../icons/trailers.png" alt="trailers" class="top">
+        <img src="../media/icons/trailers.png" alt="trailers" class="top">
     </div>
 
     <div class="row">
