--- a/index.html
+++ b/index.html
@@ -16,33 +16,8 @@
 </head>
 
 <body>
-<<<<<<< HEAD
-
- 
-
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <div class="container-fluid">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" href="./index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./secciones/classics.html">Clásicos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./secciones/noticias.html">Noticias</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./secciones/trailers.html">Trailers</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./secciones/gang.html">Sé parte</a>
-        </li>
-      </ul>
-=======
     <div class="header">
-        <img src="./icons/bienvenida.png" alt="bienvenida" class="top">
->>>>>>> final
+        <img src="./media/icons/bienvenida.png" alt="bienvenida" class="top">
     </div>
 
     <div class="row">
