--- a/secciones/classics.html
+++ b/secciones/classics.html
@@ -18,7 +18,7 @@
 <body>
 
     <div class="header">
-        <img src="../icons/classics.png" alt="classics" class="top">
+        <img src="../media/icons/classics.png" alt="classics" class="top">
     </div>
 
     <div class="row">
